--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ subprojects {
 
     dependencies {
         implementation "org.springframework:spring-context:$springVersion"
-        implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootJpa"
+        implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
+        implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
         // https://mvnrepository.com/artifact/org.postgresql/postgresql
         implementation "org.postgresql:postgresql:$postgresqlVersion"
         // https://mvnrepository.com/artifact/com.h2database/h2
