--- a/module-service/build.gradle
+++ b/module-service/build.gradle
@@ -1,20 +1,3 @@
-plugins {
-    id 'java'
-}
-
-group 'com.mjc.school.service'
-version 'unspecified'
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    implementation project(path: ':module-repository')
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-test {
-    useJUnitPlatform()
+    implementation project(':module-repository')
 }
