add test controller

--- a/module-web/build.gradle
+++ b/module-web/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
     implementation project(':module-service')
+    // https://mvnrepository.com/artifact/io.rest-assured/rest-assured
+    testImplementation 'io.rest-assured:rest-assured:4.5.1'
+
 }
