--- a/module-repository/src/main/resources/application.properties
+++ b/module-repository/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 
 server.port=8081
+server.host=http://localhost
