--- a/module-web/build.gradle
+++ b/module-web/build.gradle
@@ -2,5 +2,8 @@ dependencies {
     implementation project(':module-service')
     // https://mvnrepository.com/artifact/io.rest-assured/rest-assured
     testImplementation 'io.rest-assured:rest-assured:4.5.1'
+    // https://mvnrepository.com/artifact/org.hamcrest/hamcrest
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+
 
 }
